logs/lsshipper.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiofiles'...
Listing './lib/python3.5/site-packages/aiofiles/threadpool'...
Listing './lib/python3.5/site-packages/aiofiles-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/lsshipper'...
Listing './lib/python3.5/site-packages/lsshipper/common'...
Compiling './lib/python3.5/site-packages/lsshipper/common/utils.py'...
***   File "./lib/python3.5/site-packages/lsshipper/common/utils.py", line 30
    yield f
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/lsshipper/reader_aio.py'...
***   File "./lib/python3.5/site-packages/lsshipper/reader_aio.py", line 21
    yield (line, offset)
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lsshipper/uploaders'...
Compiling './lib/python3.5/site-packages/lsshipper/uploaders/_uploader.py'...
***   File "./lib/python3.5/site-packages/lsshipper/uploaders/_uploader.py", line 34
    yield f
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lsshipper-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
